--- a/dockerfiles/Dockerfile.api
+++ b/dockerfiles/Dockerfile.api
@@ -1,7 +1,7 @@
-FROM python:3.12.2-slim
+FROM python:3.8-slim
 
 COPY requirements/requirements-api.txt requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY img_classification/api img_classification/api
-ENTRYPOINT ["uvicorn", "--host", "0.0.0.0", "--port", "8000", "ml_service.api.app:app"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000 ", "img_classification.api.app:app"]
