--- a/requirements/requirements-api.txt
+++ b/requirements/requirements-api.txt
@@ -1,5 +1,6 @@
 flask==2.1.2
-tensorflow==2.8.0
+Werkzeug==2.2.2
+tensorflow==2.13.1
 numpy==1.22.3
 pillow==9.1.0
-gunicorn==20.1.0
+waitress==3.0.0
